# fim-lora-experiments

./: .env.example  .gitignore  README.md  RESEARCH_PLAN.md  pyproject.toml
notebooks/: 01_smoke_test.ipynb
scripts/: eval_commonsense.sh  run_ablation_eval_sweep.sh  run_commonsense_eval_sweep.sh  run_commonsense_sweep.sh  run_fim_ablation_sweep.sh  run_glue_sweep.sh  sagemaker_train.py  setup_hf_token.sh  setup_sagemaker.sh  smoke_test.sh
src/: baselines.py  collect_results.py  eval_commonsense.py  fim_allocator.py  train_commonsense.py  train_glue.py
