[project]
name = "fim-lora-experiments"
version = "0.1.0"
description = "FIM-LoRA: Fisher Information Matrix-guided adaptive rank allocation for LoRA — experiment harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "boto3>=1.42.97",
    "datasets>=4.8.5",
    "evaluate>=0.4.6",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "protobuf>=7.34.1",
    "sagemaker>=2.92.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.22.2",
    # torch: installed separately via PyTorch index to avoid nvidia-* sub-package
    # bloat (~8GB). See scripts/setup_sagemaker.sh for install instructions.
    "torch>=2.2.0",
    "tqdm>=4.67.3",
    "transformers>=5.7.0",
    "wandb>=0.26.1",
    "ipykernel>=6.0.0",
    "lm-eval>=0.4.11",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
